<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:layout_marginLeft="@dimen/skin_page_bg_x"
		android:layout_marginTop="@dimen/skin_page_bg_y"
		android:layout_width="@dimen/skin_page_bg_width"
		android:layout_height="@dimen/skin_page_bg_height"
		android:background="@drawable/skin_background"/>

	<TextView
		android:id="@+id/lang_textView_title"
		android:tag="lang_textView_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/skin_page_title_x"
		android:layout_marginTop="@dimen/skin_page_title_y"
		android:text="@string/lang_title_name"
		android:textColor="@color/song_list_title"
		android:textSize="24sp"
		/>

	<RelativeLayout
		android:id="@+id/lang_item_china"
		android:tag="lang_item_china"
		android:layout_marginLeft="@dimen/lang_page_item_china_x"
		android:layout_marginTop="@dimen/lang_page_item_china_y"
		android:layout_width="@dimen/lang_page_item_width"
		android:layout_height="@dimen/lang_page_item_height">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lang_item_bg"/>
		<ImageView
			android:layout_marginLeft="@dimen/lang_page_thumb_x"
			android:layout_marginTop="@dimen/lang_page_thumb_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/lang_item_china"/>
		<ImageView
			android:id="@+id/icon_select0"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/skin_item_icon"
			android:layout_alignParentRight="true"/>
		<TextView
			android:id="@+id/lang_item_textview0"
			android:layout_marginTop="@dimen/lang_page_text_y"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="@dimen/lang_page_text_size"
			android:gravity="center_horizontal"
			android:text="@string/lang_china"
			/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/lang_item_hongkong"
		android:tag="lang_item_hongkong"
		android:layout_marginLeft="@dimen/lang_page_item_hongkong_x"
		android:layout_marginTop="@dimen/lang_page_item_hongkong_y"
		android:layout_width="@dimen/lang_page_item_width"
		android:layout_height="@dimen/lang_page_item_height">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lang_item_bg"/>
		<ImageView
			android:layout_marginLeft="@dimen/lang_page_thumb_x"
			android:layout_marginTop="@dimen/lang_page_thumb_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/lang_item_hongkong"/>
		<ImageView
			android:id="@+id/icon_select1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/skin_item_icon"
			android:layout_alignParentRight="true"/>
		<TextView
			android:id="@+id/lang_item_textview1"
			android:layout_marginTop="@dimen/lang_page_text_y"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="@dimen/lang_page_text_size"
			android:gravity="center_horizontal"
			android:text="@string/lang_hongkong"
			/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/lang_item_english"
		android:tag="lang_item_english"
		android:layout_marginLeft="@dimen/lang_page_item_english_x"
		android:layout_marginTop="@dimen/lang_page_item_english_y"
		android:layout_width="@dimen/lang_page_item_width"
		android:layout_height="@dimen/lang_page_item_height">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lang_item_bg"/>
		<ImageView
			android:layout_marginLeft="@dimen/lang_page_thumb_x"
			android:layout_marginTop="@dimen/lang_page_thumb_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/lang_item_english"/>
		<ImageView
			android:id="@+id/icon_select2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/skin_item_icon"
			android:layout_alignParentRight="true"/>
		<TextView
			android:id="@+id/lang_item_textview2"
			android:layout_marginTop="@dimen/lang_page_text_y"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="@dimen/lang_page_text_size"
			android:gravity="center_horizontal"
			android:text="@string/lang_english"
			/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/lang_item_korea"
		android:tag="lang_item_korea"
		android:layout_marginLeft="@dimen/lang_page_item_korea_x"
		android:layout_marginTop="@dimen/lang_page_item_korea_y"
		android:layout_width="@dimen/lang_page_item_width"
		android:layout_height="@dimen/lang_page_item_height">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lang_item_bg"/>
		<ImageView
			android:layout_marginLeft="@dimen/lang_page_thumb_x"
			android:layout_marginTop="@dimen/lang_page_thumb_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/lang_item_korea"/>
		<ImageView
			android:id="@+id/icon_select3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/skin_item_icon"
			android:layout_alignParentRight="true"/>
		<TextView
			android:id="@+id/lang_item_textview3"
			android:layout_marginTop="@dimen/lang_page_text_y"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="@dimen/lang_page_text_size"
			android:gravity="center_horizontal"
			android:text="@string/lang_korea"
			/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/lang_item_japan"
		android:tag="lang_item_japan"
		android:layout_marginLeft="@dimen/lang_page_item_japan_x"
		android:layout_marginTop="@dimen/lang_page_item_japan_y"
		android:layout_width="@dimen/lang_page_item_width"
		android:layout_height="@dimen/lang_page_item_height">
		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/lang_item_bg"/>
		<ImageView
			android:layout_marginLeft="@dimen/lang_page_thumb_x"
			android:layout_marginTop="@dimen/lang_page_thumb_y"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/lang_item_japan"/>
		<ImageView
			android:id="@+id/icon_select4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@drawable/skin_item_icon"
			android:layout_alignParentRight="true"/>
		<TextView
			android:id="@+id/lang_item_textview4"
			android:layout_marginTop="@dimen/lang_page_text_y"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/white"
			android:textSize="@dimen/lang_page_text_size"
			android:gravity="center_horizontal"
			android:text="@string/lang_japan"
			/>
	</RelativeLayout>
</RelativeLayout>